# Cafe_site

./: .env.example  .gitignore  README.md  docker-compose.yml
src/backend/: .dockerignore  .env.example  Dockerfile  cafe_data.json  entrypoint.sh  pyproject.toml
src/backend/cafe_project/: middleware.py  schema.py  settings.py  urls.py
src/backend/core/: admin.py  apps.py  models.py  serializers.py  tests.py  translation.py  urls.py  views.py
src/backend/core/management/commands/: import_about_page.py  import_charity_page.py  import_evenimente_out_door.py
src/backend/core/migrations/: 0001_initial.py  0002_alter_pagehero_main_text_and_more.py  0002_reelssection_tightimagesection_videosection_and_more.py  0003_rename_image_tightimagecard_img_src_and_more.py  0004_pagesection_polymorphic_ctype.py  0005_fix_polymorphic_ctype.py  0006_page_name_en_page_name_ro_page_name_ru_and_more.py  0007_siteimages.py  0008_alter_siteimages_options.py  0009_rename_siteimages_siteimage_and_more.py  0010_siteimage_created_at_siteimage_updated_at_and_more.py  0011_alter_pagehero_img_src.py  0012_alter_tightimagecard_img_src_and_more.py  0013_pagesection_core_pagese_page_id_a2eae0_idx_and_more.py
src/backend/menu/: admin.py  models.py  serializers.py  tests.py  translation.py  urls.py  views.py
src/backend/menu/migrations/: 0001_initial.py  0002_alter_menuproduct_full_description_and_more.py  0003_alter_menuproduct_full_description.py  0004_menucategory_name_en_menucategory_name_ro_and_more.py  0005_alter_menuproduct_img_src.py  0006_menuproduct_menu_menupr_categor_c907bc_idx.py
(+59 files in other folders)
