[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-admin-sortable2>=2.3.1",
    "django-cors-headers>=4.9.0",
    "django-modeltranslation>=0.20.3",
    "django-polymorphic>=4.11.5",
    "django-tinymce>=5.0.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]
